sync for the first file

--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
-
-
+<html>
+<head>
+<title>Mage Photograhy</title>
+</head>
+<body>
+<h1>This is my first HTML page!</h1>
+<p>I am so excited to be learning HTML.</p>
+</body>
 </html>
