preparing to the websites

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Mage Photograhy</title>
+    <head>
+<title>MagePhotograhy</title>
 </head>
 <body>
-<h1>This is my first HTML page!</h1>
-<p>I am so excited to be learning HTML.</p>
-</body>
+    <main>
+        <h1>Sample text</h1>
+    </main>
+    </body>
 </html>
